--- a/static/stylesheets/layout.css
+++ b/static/stylesheets/layout.css
@@ -8,7 +8,7 @@ body {
     background-size: cover;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
     color: ivory;
     background-color: slategrey;
     padding: 5px;
@@ -17,4 +17,17 @@ h1, h2, h3, h4, h5, h6 {
 p, a {
     font-size: 16px;
     
+}
+
+.nav-item{
+    background-color: #111;
+    color: beige;
+    padding: 5px 7px;
+    margin: 1px 7px;
+    border-radius: 4px;
+}
+
+.container{
+    margin: 10px 20px;
+    padding: 10px;
 }
