--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,10 @@
 {% extends 'layout.html' %}
+{% set page_title="result" %}
 
 {% block content %}
-    <h3>Homepage</h3>
+    <h3>Result</h3>
+    Test123
+
 {% endblock %}
 
 {% block scripts %}
