--- a/templates/train.html
+++ b/templates/train.html
@@ -1,7 +1,8 @@
 {% extends 'layout.html' %}
+{% set page_title="train" %}
 
 {% block content %}
-    <h3>Homepage</h3>
+    <h3>Train</h3>
 {% endblock %}
 
 {% block scripts %}
