--- a/static/stylesheets/layout.css
+++ b/static/stylesheets/layout.css
@@ -31,3 +31,20 @@ p, a {
     margin: 10px 20px;
     padding: 10px;
 }
+
+.word{
+    color: black;
+    background-color:rgb(233, 184, 168);
+    margin-right: 10px;
+    padding: 2px 10px;
+}
+
+.emphasis_01{
+    background-color:saddlebrown;
+    padding: 10px;
+}
+
+.result{
+    background-color: beige;
+    padding: 5px 10px;
+}
