--- a/templates/examine.html
+++ b/templates/examine.html
@@ -7,7 +7,7 @@
         <form method="post">
             <h4>What text would you like to be examined?</h4>
             <br>
-            <textarea rows=10 cols=200 name="text_input" placeholder="paste or type text here"></textarea>
+            <textarea rows=10 cols=200 name="text_input" placeholder="paste or type text here" minlength="15" required></textarea>
             <br>
             <button class="btn btn-secondary" type="submit">Submit</button>
         </form>
