--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -39,6 +39,7 @@
               Conversation
             </a>
           </span>
+          <span class="site-url">aialexico.pythonanywhere.com</span>
         </div>
       </nav>
 </nav>
