--- a/static/stylesheets/layout.css
+++ b/static/stylesheets/layout.css
@@ -47,3 +47,15 @@ p, a {
     background-color: beige;
     padding: 5px 10px;
 }
+
+.site-url{
+    position:fixed;
+    display: block;
+    background-color: beige;
+    font-weight: bold;
+    color: #111;
+    padding: 5px 7px;
+    margin: 1px 7px;
+    border-radius: 4px;
+    right: 100px;
+}
