added a welcome text to the homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,16 @@
 
 {% block content %}
     <h3>Homepage</h3>
+    <br>
+    <div class="container">
+        <p>This is a website in development.</p>
+        <p></p>
+        <p>For now, only the 'examine text' button works.</p>
+        <p>But in the future I plan to have the other pages/buttons work as well.</p>
+        <p></p>
+        <p>Click 'Examine text' in the top menu. Then copy-paste an English text into the text-area and click 'submit'.</p>
+
+    </div>
 {% endblock %}
 
 {% block scripts %}
