--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,9 @@
     <div class="container">
         <p>This is a website in development.</p>
         <p></p>
-        <p>For now, only the 'examine text' button works.</p>
-        <p>But in the future I plan to have the other pages/buttons work as well.</p>
+        <p>For now, only the 'examine text' feature works,</p>
+        <p>And the 'training' feature partially.</p>
+        <p>But in the future I plan to have the other features work as well.</p>
         <p></p>
         <p>Click 'Examine text' in the top menu. Then copy-paste an English text into the text-area and click 'submit'.</p>
 
