added button for API key

--- a/templates/examine.html
+++ b/templates/examine.html
@@ -5,7 +5,10 @@
     <h3>Examine</h3>
     <div class="container">
         <form method="post">
-            <h4>What text would you like to be examined? <button class="btn btn-info" id="random_text">Get random text</button></h4>
+            <h4>What text would you like to be examined? 
+                <button class="btn btn-info" id="random_text">Get random text</button>
+                <a href="https://newsdata.io/register" target="_blank"><button type="button" class="btn btn-primary">Obtain API key</button></a>
+            </h4>
             <br>
             <textarea rows=10 
                       cols=200 
@@ -18,6 +21,9 @@
             
             <br>
             <button class="btn btn-secondary" type="submit">Submit</button>
+
+
+            
         </form>
     </div>
 {% endblock %}
