minor text edit

--- a/templates/examine.html
+++ b/templates/examine.html
@@ -65,7 +65,7 @@
         if (API_key){
             get_random_text(API_key);
         } else {
-            API_key=prompt("Please provide https://newsapi.org/ API key")
+            API_key=prompt("Please provide https://gnews.io/ API key")
             localStorage.setItem("API-key", API_key);
             get_random_text(API_key);
         } 
